--- a/blocks/card/__footer/card__footer.css
+++ b/blocks/card/__footer/card__footer.css
@@ -1,7 +1,7 @@
 .card__footer {
   height: 50px;
   display: flex;
-  font-size: 20px;
+  position: relative;
   justify-content: space-around;
   align-items: center;
   width: 100%;
