--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,9 @@
 .header {
   width: 100%;
-  background-color: red;
+  background-color: white;
   margin: 0 auto;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 10px 0;
+  padding: 10px 10%;
 }
