--- a/blocks/search/__input/search__input.css
+++ b/blocks/search/__input/search__input.css
@@ -4,4 +4,9 @@
   border: none;
   border-radius: 20px;
   padding: 0 20px;
+  background-color: transparent;
+  font-size: 16px;
+}
+.search__input::placeholder {
+  color: #bebebe;
 }
