--- a/blocks/search/search.css
+++ b/blocks/search/search.css
@@ -2,7 +2,7 @@
   width: 500px;
   height: 40px;
   border-radius: 20px;
-  background-color: white;
+  background-color: #f9f8fd;
   display: flex;
   justify-content: space-between;
   align-items: center;
