--- a/blocks/header/__nav/header__nav.css
+++ b/blocks/header/__nav/header__nav.css
@@ -2,9 +2,15 @@
   width: 200px;
   display: flex;
   justify-content: space-around;
+  position: relative;
+  align-items: center;
 }
 .header__nav svg {
   height: 30px;
   width: 40px;
   cursor: pointer;
+}
+.header__nav i {
+  cursor: pointer;
+  font-size: 25px;
 }
