--- a/blocks/card/__footer/card__footer.css
+++ b/blocks/card/__footer/card__footer.css
@@ -7,8 +7,7 @@
   width: 100%;
   border-top: 1px solid gray;
 }
-.card__footer svg {
-  width: 35px;
-  height: 30px;
+.card__footer i {
   cursor: pointer;
+  font-size: 25px;
 }
