--- a/blocks/dropdown/__header/dropdown__header.css
+++ b/blocks/dropdown/__header/dropdown__header.css
@@ -10,8 +10,6 @@
   cursor: pointer;
 }
 
-.dropdown__header svg {
-  height: 20px;
-  width: 25px;
-  transition: all 0.5s ease;
+.dropdown__header i {
+  font-size: 20px;
 }
