--- a/blocks/sidebar/__header/sidebar__header.css
+++ b/blocks/sidebar/__header/sidebar__header.css
@@ -6,8 +6,7 @@
   height: 50px;
 }
 
-.sidebar__header svg {
-  width: 40px;
-  height: 30px;
+.sidebar__header i {
+  font-size: 25px;
   cursor: pointer;
 }
