--- a/index.css
+++ b/index.css
@@ -49,6 +49,15 @@
 @import url("./blocks/sidebar/__title/sidebar__title.css");
 @import url("./blocks/sidebar/__header/sidebar__header.css");
 
+@import url("./blocks/pagination/pagination.css");
+@import url("./blocks/pagination/__item/pagination__item.css");
+@import url("./blocks/pagination/__list/pagination__list.css");
+@import url("./blocks/pagination/__item/_active/pagination__item_active.css");
+
+@import url("./blocks/scale/scale.css");
+@import url("./blocks/move-right/move-right.css");
+@import url("./blocks/rotate/rotate.css");
+
 * {
   margin: 0;
   padding: 0;
