--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -3,4 +3,10 @@
   text-align: center;
   font-weight: normal;
   text-transform: capitalize;
+  width: 90%;
+}
+@media screen and (max-width: 1160px) {
+  .card__title {
+    font-size: 18px;
+  }
 }
