--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -9,4 +9,11 @@
   justify-content: space-between;
   align-items: center;
   justify-self: center;
+  min-width: none;
+}
+@media screen and (max-width: 1160px) {
+  .card {
+    width: 220px;
+    height: 300px;
+  }
 }
