--- a/blocks/cart-product/__cant/cart-product__cant.css
+++ b/blocks/cart-product/__cant/cart-product__cant.css
@@ -1,3 +1,8 @@
 .cart-product__cant {
   font-size: 16px;
 }
+@media screen and (max-width: 1160px) {
+  .cart-product__cant {
+    font-size: 14px;
+  }
+}
