--- a/blocks/cart-product/__image/cart-product__image.css
+++ b/blocks/cart-product/__image/cart-product__image.css
@@ -1,3 +1,8 @@
 .cart-product__image {
   width: 80px;
 }
+@media screen and (max-width: 1160px) {
+  .cart-product__image {
+    width: 60px;
+  }
+}
