--- a/blocks/cart-product/__price/cart-product__price.css
+++ b/blocks/cart-product/__price/cart-product__price.css
@@ -1,3 +1,8 @@
 .cart-product__price {
   font-size: 16px;
 }
+@media screen and (max-width: 1160px) {
+  .cart-product__price {
+    font-size: 14px;
+  }
+}
