--- a/blocks/cart-product/cart-product.css
+++ b/blocks/cart-product/cart-product.css
@@ -5,3 +5,9 @@
   height: 100px;
   border-top: 1px solid #e1e1e1;
 }
+
+@media screen and (max-width: 1160px) {
+  .cart-product i {
+    font-size: 20px;
+  }
+}
