--- a/blocks/filter-section/filter-section.css
+++ b/blocks/filter-section/filter-section.css
@@ -1,10 +1,17 @@
 .filter-section {
-  width: 100%;
-  max-width: 1500px;
+  width: 70%;
+  min-width: 1140px;
   background-color: white;
   margin: 0 auto;
   display: flex;
   justify-content: end;
   padding: 10px;
   margin-top: 20px;
+}
+@media screen and (max-width: 1160px) {
+  .filter-section {
+    width: 99%;
+    margin: 0 auto;
+    min-width: 320px;
+  }
 }
