--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,3 +2,8 @@
   font-size: 36px;
   cursor: pointer;
 }
+@media screen and (max-width: 768px) {
+  .header__logo {
+    margin-left: 50px;
+  }
+}
