--- a/blocks/products-container/products-container.css
+++ b/blocks/products-container/products-container.css
@@ -2,7 +2,38 @@
   width: 70%;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   gap: 20px 20px;
   margin-top: 20px;
+  min-width: 1140px;
+}
+
+.products-container > h3 {
+  margin-left: 20px;
+}
+
+@media screen and (max-width: 1160px) {
+  .products-container {
+    grid-template-columns: repeat(4, 24%);
+    width: 100%;
+    min-width: 0;
+    justify-content: center;
+    gap: 20px 10px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .products-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (max-width: 768px) {
+  .products-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 475px) {
+  .products-container {
+    grid-template-columns: 1fr;
+  }
 }
