--- a/index.css
+++ b/index.css
@@ -42,6 +42,11 @@
 @import url("./blocks/card/__price/card__price.css");
 @import url("./blocks/card/__title/card__title.css");
 @import url("./blocks/card/__old-price/card__old-price.css");
+@import url("./blocks/card/__counter/card__counter.css");
+@import url("./blocks/card/__cant/card__cant.css");
+@import url("./blocks/card/__controller/card_controller.css");
+@import url("./blocks/card/__cart-section/card__cart-section.css");
+@import url("./blocks/card/__price-section/card__price-section.css");
 
 @import url("./blocks/sidebar/sidebar.css");
 @import url("./blocks/sidebar/__item/sidebar__item.css");
